--- a/Mi-Propio-Jefe-main/src/estilos/index.css
+++ b/Mi-Propio-Jefe-main/src/estilos/index.css
@@ -50,7 +50,7 @@
 
   .login-section {
     flex: 1;
-    border-buttom: none;
+    border-bottom: none;
     border-right: 1px solid #e6e6e6;
   }
 
